# tiny-crawler

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/www.gutenberg.org/Top 100 EBooks yesterday/: 1342.txt.utf-8  1513.txt.utf-8  2701.txt.utf-8  52206.txt.utf-8  84.txt.utf-8
tiny_crawler/: __init__.py
tiny_crawler/crawler/: __init__.py  engine.py  pipeline.py  tracker.py  worker.py
tiny_crawler/examples/: README.txt  multi_step_download.py  multi_step_mongo.py  multi_step_proxy.py  single_url.py  site_8080txt_download.py
tiny_crawler/http/: __init__.py  client.py  socks_session.py
tiny_crawler/parser/: __init__.py  base.py
tiny_crawler/proxy/: __init__.py  checker.py  fetcher.py  manager.py
tiny_crawler/storage/: __init__.py  base.py  html.py  json.py  mongo.py  raw.py
tiny_crawler/utils/: __init__.py  backoff.py  logger.py  loop.py  misc.py  user_agents.py
