[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny_crawler"
version = "0.1.0"
description = "Tiny async multi-threaded crawling framework"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["tiny_crawler*"]
